[project]
name = "pyjadx"
version = "0.1.0"
description = "Python bindings for JADX — decompile Android APK/DEX to Java source."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Amruth Niranjan", email = "amruthsniranjan@gmail.com" }
]
keywords = [
    "jadx", "android", "apk", "dex", "decompiler",
    "reverse-engineering", "dalvik", "java", "kotlin"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Disassemblers",
    "Operating System :: OS Independent",
]
dependencies = [
    "jpype1>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/amruth-sn/pyjadx"
Repository = "https://github.com/amruth-sn/pyjadx"
Issues = "https://github.com/amruth-sn/pyjadx/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyjadx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "jvm: tests that require a running JVM (deselect with -m 'not jvm')",
]
